# gandalf

./: Cargo.toml
gandalf-gui/: Cargo.toml  build.rs
gandalf-gui/src/: main.rs  window.rs
gandalfctl/: Cargo.toml
gandalfctl/src/: main.rs
gandalfd/: Cargo.toml  build.rs  gandalf.html
gandalfd/src/: browser.rs  main.rs  process.rs
src/: lib.rs
